Increase touch target size of list items and fix overflow of lists

--- a/app/components/Forms/Fieldset.module.css
+++ b/app/components/Forms/Fieldset.module.css
@@ -3,6 +3,7 @@
   margin: 0;
   margin-block-start: var(--size-3);
   padding: 0.01em 0 0;
+  font-size: var(--font-size-2);
   border: 0;
 }
 
