--- a/app/components/Forms/ValidationSummary.module.css
+++ b/app/components/Forms/ValidationSummary.module.css
@@ -11,6 +11,6 @@
 }
 
 .error {
-  padding: var(--size-1) var(--size-2);
+  padding: var(--size-2) var(--size-3);
   background-color: var(--warning-1);
 }
